--- a/ds1m-b/felipeflorencio/css/composers.css
+++ b/ds1m-b/felipeflorencio/css/composers.css
@@ -1,8 +1,8 @@
 .composers ul{
     display: flex;
-    justify-content: space-between;
-    padding: 3rem;
-    height: 75%;
+    gap: 10%;
+    margin-top: 40px;
+    margin-left: 50px;
 }
 .composers li{
    display: flex;
