--- a/ds1m-b/felipeflorencio/css/composers.css
+++ b/ds1m-b/felipeflorencio/css/composers.css
@@ -3,6 +3,8 @@
     gap: 10%;
     margin-top: 40px;
     margin-left: 50px;
+    margin-right: 50px;
+    justify-content: space-around;
 }
 .composers li{
    display: flex;
