--- a/ds1m-b/one-page-leticia/css/style.css
+++ b/ds1m-b/one-page-leticia/css/style.css
@@ -45,3 +45,9 @@ footer{
     border-top: 2px solid #000;
     font-size: .75rem;
 }
+
+@media (max-width: 960px) {
+    footer{
+        font-size: 0.60rem;
+    }
+}
