--- a/ds1m-b/Paula-B/css/sobre.css
+++ b/ds1m-b/Paula-B/css/sobre.css
@@ -3,38 +3,35 @@
 }
 
 .icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    font-weight: 400;
+    font-size: 6vw;
     gap: 26px;
     background-color: #F8E795;
 }
 
-.titlee {
-    display: flex;
-    font-size: 7rem;
+.title_main {
+    display: grid;
     font-family: 'Piedra', cursive;
-    font-weight: 800;
-    justify-content: center;
+    font-weight: 400;
+    font-size: 6vw;
+    color: black;
 }
 
 .sobre-gatos {
-    display: flex;
+    display: grid;
     background-image: url(../img/fundo11.png);
     background-size: cover;
     width: 100%;
     height: 85vh;
     background-repeat: no-repeat;
-    justify-content: center;
-    align-items: center;
 }
-
 .description-cat {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 350px;
-    padding-right: 60px;
+    gap: 370px;
+    font-size: 1.8vw;
     font-family: 'Patrick Hand', cursive;
     text-shadow: black 0.2em 0.2em 0.3em;
 }
@@ -43,14 +40,12 @@
     display: grid;
     width: 500px;
     margin-top: 50px;
-    font-size: 2rem;
+    
     color: white;
 }
 
 .description-text {
     display: flex;
     flex-direction: column;
-    max-width: 500px;
-    font-size: 2rem;
     color: white;
 }
