--- a/ds1m-b/felipeflorencio/css/skills.css
+++ b/ds1m-b/felipeflorencio/css/skills.css
@@ -2,26 +2,23 @@
     grid-area: skills;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
-.skills__title {
-    font-size: 32px;
-    color: #D2D1E8;
-}
+
 
 .skills h3{
    color: #FFFFFF80;
    font-size: 2.5rem;
-   margin-right: 8%;
    margin-bottom: 4%;
-
+   margin-right: 1%;
 }
 .skills__container {
     display: flex;
     flex-wrap: wrap;
     gap: 5.5rem;
-
+    width: 73%;
 }
 
 .skills__icon {
