Responsividade de tablet terminada

--- a/ds1m-b/felipeflorencio/css/backgrounds.css
+++ b/ds1m-b/felipeflorencio/css/backgrounds.css
@@ -23,3 +23,11 @@
   transform: translate(-11%, 2%);
   width: 78rem;
 }
+/* TABLET */
+@media (max-width: 960px) {
+ #bghome{
+   top: 0%;
+   left: 35%;
+ }
+
+}
