--- a/ds1m-b/felipeflorencio/css/skills.css
+++ b/ds1m-b/felipeflorencio/css/skills.css
@@ -43,3 +43,9 @@
     font-family: "Sunflower";
     font-weight: 700;
 }
+/* TABLET */
+@media (max-width: 960px) {
+    .skills__container{
+        width: 82%;
+    }
+}
