--- a/ds1m-b/Eduardo Ribeiro Pimenta/css/style.css
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/css/style.css
@@ -2,9 +2,13 @@
     --primary-color: #ffffff;
     --select-color: #08CC10;
 }
+html{
+    scroll-behavior: smooth;
+}
 
 body{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-template-areas:"content";
 
     font-family: VCR_OSD_MONO;
@@ -12,13 +16,13 @@ body{
 }
 
 header{
-    grid-area: content;
-    place-self: start center;
+    position: absolute;
+    place-self: center center;
     font-size: 2rem;
     padding-top: 35px;
     display: flex;
     align-items: center;
-    z-index: 1;
+    z-index: 3;
 }
 
 main{
@@ -31,3 +35,22 @@ main{
 section{
     height: 100vh;
 }
+
+footer{
+    height: 50px;
+    width: 100%;
+    display: grid;
+    place-content: center;
+    font-weight: 100;
+}
+.a{
+    height: 50px;
+    width: 99vw;
+    display: grid;
+    place-items: center;
+    border-top-style:solid;
+    border-top-color: #fff2 ;
+    border-width:5px;
+    z-index: 10;
+}
+
