--- a/ds1m-b/one-page-leticia/css/contatos.css
+++ b/ds1m-b/one-page-leticia/css/contatos.css
@@ -43,3 +43,45 @@
     width: 370px; 
     height: 220px; 
 } 
+
+/* TABLET */
+@media (max-width: 960px) {
+    .contatos{
+        grid-template-areas: 
+        "title title title"
+        "animation  link"
+        "social social social";
+        grid-template-rows: 250px 500px 450px;
+        grid-template-columns: 1fr 350px 1fr;
+        align-items: unset;
+        gap: 40px; 
+    }
+    .social{
+        font-size: 36px; 
+    }
+    .link-container{
+        grid-area: link;
+        display: flex;
+        align-items: center;
+        margin-left: 20px;
+    }
+    .link-container h3 {
+        font-size: 1.2rem;  
+    }
+    .social-container{
+        grid-area: social;
+        display: flex;
+        justify-self: center;
+        margin-top: 90%;
+        margin-left: 55%;
+    } 
+    .social{
+        font-size: 36px;
+    }
+    .gif{
+        grid-area: animation;
+        display: flex;
+        width: 370px; 
+        height: 220px; 
+    } 
+}    
