--- a/ds1m-b/one-page-leticia/css/filmes.css
+++ b/ds1m-b/one-page-leticia/css/filmes.css
@@ -50,7 +50,7 @@
         height: fit-content;  
         width: 75%;
         gap: 25px;
-        margin-top: 120px;
+        margin-top: 60%;
     }
     .filmes img {
         width: 670px;
