--- a/ds1m-b/one-page-leticia/css/slider.css
+++ b/ds1m-b/one-page-leticia/css/slider.css
@@ -1,12 +1,16 @@
-/* slider {
-    margin: auto;
-    margin-top: 20px;
-    position: relative;
+.slider {
+    grid-area: slider;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+.slider__title{
+    font-size: 40px;
 }
 
 .slider li {
     list-style: none;
-    position: absolute;
+    position: absolute; 
 }
 
 .slider img {
@@ -21,14 +25,13 @@
     display: none;
 }
 .slider label {
-    background-color: black;
+    background-color: #fff;  
     bottom: 10px;
     cursor: pointer;
     display: block;
     height: 10px;
     width: 10px;
     position: absolute;
-    
     z-index: 10;
 }
 
@@ -46,9 +49,31 @@
 .slider li:nth-child(4) label{
     left: 100px;
 }
+.slider li:nth-child(5) label{
+    left: 130px;
+}
 
 .slider li input:checked ~ img {
     opacity: 1;
     visibility: visible;
     z-index: 10;
-} */
+}
+
+@media (max-width: 960px) {
+    .slider img{
+        height: 300px ; 
+        width: 425px;
+    }
+    .slider{
+        margin-right: 40%;
+        align-items: center;
+    }
+    .slider__title{
+        font-size: 50px;
+    }
+    .slider label{
+        bottom: 20px;
+        height: 20px;
+        width: 20px;
+    }
+}
