--- a/ds1m-b/felipeflorencio/css/about.css
+++ b/ds1m-b/felipeflorencio/css/about.css
@@ -6,11 +6,12 @@
    margin-top: 3%;
    font-family: 'Fredericka the Great';
    display: grid;
+   grid-auto-columns: max-content;
    grid-template-rows: auto auto;
    grid-template-areas: 
       "foto nome"
       "descricao skills";
-   gap: 36px;
+   gap: 2rem;
    margin-left: 15%;
 }
 .about__container p{
@@ -32,6 +33,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
 }
 #eusou{
    font-size: 4rem;
