--- a/ds1m-b/felipeflorencio/css/skills.css
+++ b/ds1m-b/felipeflorencio/css/skills.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 
@@ -12,13 +12,14 @@
    color: #FFFFFF80;
    font-size: 2.5rem;
    margin-bottom: 4%;
-   margin-right: 1%;
+   text-align: center;
+   margin-left: 10rem;
 }
 .skills__container {
     display: flex;
     flex-wrap: wrap;
-    gap: 5.5rem;
-    width: 73%;
+    gap: 5rem;
+    width: 34rem;
 }
 
 .skills__icon {
