--- a/ds1m-b/Eduardo Ribeiro Pimenta/css/menu.css
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/css/menu.css
@@ -5,3 +5,9 @@
 .menu span:hover{
     color: var(--select-color);
 }
+@media(max-width:1200px){
+    .menu{
+        gap: 20px;
+        align-items: center;
+    }
+}
