--- a/ds1m-b/Eduardo Ribeiro Pimenta/css/style.css
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/css/style.css
@@ -43,14 +43,27 @@ footer{
     place-content: center;
     font-weight: 100;
 }
-.a{
+.copyright{
     height: 50px;
-    width: 99vw;
+    width: 100%;
     display: grid;
     place-items: center;
     border-top-style:solid;
     border-top-color: #fff2 ;
     border-width:5px;
-    z-index: 10;
+    z-index:2;
 }
 
+@media(max-width:1200px){
+    .copyright{
+        height: 40px;
+    }
+    footer{
+        height: 55px;
+    }
+}
+@media(max-width:770px){
+    section{
+        height: 150vh;
+    }
+}
