--- a/ds1m-b/felipeflorencio/css/backgrounds.css
+++ b/ds1m-b/felipeflorencio/css/backgrounds.css
@@ -1,36 +1,52 @@
 .backgrounds{
   position: absolute;
+  width: 110%;
 }
 #bghome{
-  top: -3rem;
-  right: 2rem;
-  width: 73rem;
+  top: -4rem;
+  right: 3rem;
+  width: 70rem;
   position: absolute;
   z-index: -1;
 }
 #bgcomposers{
   position: absolute;
   z-index: -1;
+  top: 59rem;
+  width: 83rem;
 }
 #bginstruments{
   position: absolute;
   z-index: -1;
-  transform: translate(-1rem,-20rem); 
-  width: 81rem;
+  transform: translate(-1rem,-27rem);
+  width: 100rem;
 }
 #bgabout{
-  z-index: -5;
-  transform: translate(-11%, 2%);
+  z-index: -1;
   width: 78rem;
+  left: 15%;
 }
 /* TABLET */
 @media (max-width: 960px) {
  #bghome{
-   top: 0%;
-   left: 35%;
+  top: 0%;
+  left: 33%;
+  width: 110%;
+
  }
+
  #bgabout{
-   left: 27%;
+   width: 120%;
+ }
+ #bgcomposers{
+   top: 60rem;
+   width: 120%;
+ }
+ #bginstruments{
+   width: auto;
+   
+  height: 87rem;
+  transform: translate(0rem,-18rem);
  }
 
 }
