--- a/ds1m-b/felipeflorencio/css/style.css
+++ b/ds1m-b/felipeflorencio/css/style.css
@@ -21,9 +21,9 @@ body {
     background-color: var(--body-color);
     display: flex;
     flex-direction: column;
+    padding-top: 10%;
     padding: var(--space-default);
-    gap: 1rem
-    ;
+    gap: 1rem;
     box-sizing: border-box;
 
 }
@@ -33,7 +33,6 @@ body {
 }
 section {
     height: 100vh;
-    width: 100%;
     background-color: var(--section-color);
     border-radius: 2px;
     display: flex;
@@ -46,11 +45,8 @@ section {
 
 /* TABLET */
 @media (max-width: 960px) {
-    body{
-        margin: 5%;
-    }
     section{
-        width: 160vh;
+        
     }
 
 }
