--- a/ds1t-b/claudioSousa/CSS/home.css
+++ b/ds1t-b/claudioSousa/CSS/home.css
@@ -11,3 +11,13 @@
 .img-logo{
     border-radius: 86px;
 }
+
+
+@media (max-width: 640px ){
+    
+
+    .img-logo{
+        width: 300px;
+    }
+    
+}
