--- a/ds1t-b/claudioSousa/CSS/cardapio.css
+++ b/ds1t-b/claudioSousa/CSS/cardapio.css
@@ -57,3 +57,63 @@
 }
 
 
+@media (max-width: 640px){
+    .cardapio{
+        max-width: 640px;
+        height: 130vh;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+                "title title"
+                "ttext ttext"
+                "ttext2 ttext2"
+            ;
+
+    }
+
+    .ml{
+        margin-left: 0px;
+    }
+
+    .card-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0px;
+        
+    }
+
+    .porcoes{
+        font-size: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+
+    }
+
+    .fotoDaCarne{
+        width: 175px;
+    }
+
+    .card-text2 {
+        display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-left: 0px;
+
+
+    }
+
+    .bebidas{
+        font-size: 1rem;
+        display: flex;
+            flex-direction: column;
+    }
+        
+
+
+
+
+}
+
