--- a/ds1t-b/claudioSousa/CSS/reservasELocalizacao.css
+++ b/ds1t-b/claudioSousa/CSS/reservasELocalizacao.css
@@ -86,3 +86,62 @@
 
     
 }
+
+
+@media (max-width: 640px) {
+
+    .reservasELocalizacao{
+        height: 160vh;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+                "reservas"
+                "localizacao";
+        max-width: 640px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .reservas{
+        font-size: 1rem;
+        height: 80vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .reservas-bg{
+        width: 220px;
+        height: 305px;
+        gap: 10px;
+    }
+    
+    .bt-reservas{
+            width: 180px;
+            height: 43px;
+            font-size: 1rem;
+    }
+
+    .localizacao{
+        height: 80vh;
+        font-size: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+
+    }
+
+    .localizacao-bg{
+        display: flex;
+        flex-direction: column;
+        font-size: 1rem;
+        width: 273px;
+        height: 420px;
+    }
+
+    .maps{
+        width: 225px;
+        
+    }
+}
