--- a/ds1m-b/felipeflorencio/css/composers.css
+++ b/ds1m-b/felipeflorencio/css/composers.css
@@ -1,36 +1,3 @@
-.composers ul{
-    display: flex;
-    gap: 10%;
-    margin-top: 40px;
-    margin-left: 50px;
-    margin-right: 50px;
-    justify-content: space-around;
-}
-.composers li{
-   display: flex;
-   flex-direction: column;
-   width: 16rem;
-   gap: 1.75rem;
-}
-.composers h2{
-    font-family: 'Fredericka the Great';
-    font-weight: 400;
-    font-size: 48px;
-    line-height: 59px;
-    color: #D2D1E8;
-}
-.composers p{
-    font-family: 'Sunflower';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    letter-spacing: 0.11em;
-    color: #D2D1E8;
-}
-.composers li img{
-    height: 332px;
-    width: 259px;
-}
 #chopin{
     align-items: flex-start;
     text-align: left;
@@ -45,7 +12,31 @@
     text-align: end;
     margin-top: 2.8rem;
 }
-.circle-for-pages{
-    margin-left: 5%;
-    margin-bottom: 10%;
+@media (max-width:960px) {
+    #bethoven,#mozart{
+       margin-top: 0;
+    }
+    .index-composers{
+        margin-bottom: 0;
+    }
+   .composers{
+        display: flex;
+        flex-flow: column nowrap;
+   }
+   .composers-wrapper{
+    overflow-x: hidden;
+    overflow-y: hidden;
+   }
+   .buttons{
+    display: inline;
+    height: 2rem;
+    width: 2rem;
+    justify-content: center;
+   }
+   .composers__buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+   }
+    
 }
