--- a/ds1m-b/felipeflorencio/css/skills.css
+++ b/ds1m-b/felipeflorencio/css/skills.css
@@ -2,24 +2,26 @@
     grid-area: skills;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 }
 
-
+.skills__title {
+    font-size: 32px;
+    color: #D2D1E8;
+}
 
 .skills h3{
    color: #FFFFFF80;
    font-size: 2.5rem;
+   margin-right: 8%;
    margin-bottom: 4%;
-   text-align: center;
-   margin-left: 10rem;
+
 }
 .skills__container {
     display: flex;
     flex-wrap: wrap;
-    gap: 5rem;
-    width: 34rem;
+    gap: 5.5rem;
+
 }
 
 .skills__icon {
@@ -43,8 +45,4 @@
     color: #D2D1E8;
     font-family: "Sunflower";
     font-weight: 700;
-}
-/* TABLET */
-@media (max-width: 960px) {
-    
 }
