--- a/ds1t-b/André Luiz/css/mobile.css
+++ b/ds1t-b/André Luiz/css/mobile.css
@@ -100,3 +100,15 @@
     border-radius: 30px;
     color: #000;
 }
+
+@media (max-width: 320px){
+
+    .section-mobile{
+        max-width: 550px;
+        width: 100%;
+        grid-template-columns: 1;
+    }
+
+
+
+}
