--- a/ds1m-b/Paula-B/css/style.css
+++ b/ds1m-b/Paula-B/css/style.css
@@ -1,41 +1,61 @@
-                 :root {
-                    --primari-color: #F8E795;
-                    --cinze-color: #E7E7E7;
-                    --amareloEsc-color: #D2AC47;
-                }
-                
-                html {
-                    scroll-behavior: smooth;
-                }
-                
-                body {
-                    grid-template-areas: "content";
-                    background-color: #E7E7E7;
-                    place-content: center;
-                }
-                
-                header {
-                    grid-area: content;
-                    width: 100%;
-                    display: grid;
-                    grid-template-columns: auto 1fr;
-                    justify-content: space-between;
-                    align-items: center;
-                    background-color: #F8E795;
-                    font-family: 'Updock', cursive;
-                }
-                
-                main {
-                    flex-direction: column;
-                    align-items: center;
-                }
-                
-                section {
-                    height: 100vh;
-                }
-                
-                footer {
-                    height: 10vh;
-                    width: 100%;
-                    display: grid;
-                }
+:root {
+    --primari-color: #F8E795;
+    --cinze-color: #E7E7E7;
+    --amareloEsc-color: #D2AC47;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    grid-template-areas: "content";
+    background-color: #E7E7E7;
+    place-content: center;
+}
+
+header {
+    grid-area: content;
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #F8E795;
+    font-family: 'Updock', cursive;
+}
+
+main {
+    flex-direction: column;
+    align-items: center;
+}
+
+section {
+    height: 100vh;
+}
+
+footer {
+    place-self: end center;
+    height: 10vh;
+    width: 100%;
+    display: grid;
+    place-content: center;
+    border-top: 2px solid #000;
+    background-color: #F8E795;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 2rem;
+}
+.voltar {
+    position: fixed;
+    right: 16px;
+    bottom: 16px;
+    display: grid;
+    place-content: center;
+    font-size: 8rem;
+    transition: all .5s;
+    color: black;
+}
+
+.voltar:hover {
+    color: #D2AC47;
+}
