--- a/ds1t-b/André Luiz/css/mobile.css
+++ b/ds1t-b/André Luiz/css/mobile.css
@@ -104,11 +104,61 @@
 @media (max-width: 320px){
 
     .section-mobile{
+        height: 200vh;
         max-width: 550px;
         width: 100%;
-        grid-template-columns: 1;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 100px 1fr 1fr 1fr;
     }
 
+    .title-mobile-container{
+        grid-row: 1;
+        grid-column: 1;
+        padding-left: 0;
+        display: flex;
+        align-items: center;
+}
 
+    .promotion-container1{
+        grid-column: 1;
+        grid-row: 2;
+        gap: 56px;
+    }
+
+    .promotion-container1 a{
+        width: 263px;
+        height: 73px;
+    }
+
+    .promotion-container1 img{
+        width: 212px;
+        height: 227px;
+    }
+
+    .promotion-text-container-mobile{
+        grid-column: 1;
+        grid-row:3;   
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        align-self: center;
+    }
+
+    .promotion-container2{
+        grid-column: 1;
+        grid-row: 4;
+    }
+
+    .promotion-container2 a{
+        width: 263px;
+        height: 73px;
+    }
+
+    .promotion-container2 img{
+        width: 263px;
+        height: 334px;
+    }
 
 }
