--- a/ds1t-b/one-page-x/css/descricao-filme.css
+++ b/ds1t-b/one-page-x/css/descricao-filme.css
@@ -1,4 +1,5 @@
 .descricao-filme{
+    width: 100%;
     display: grid;
     grid-template-areas: 
     "diretor-filme frase pearl nome-filme"
@@ -68,6 +69,7 @@
     color: #91000A;
     transition: 0.6s;
     margin-top: 28px;
+    background-color: #000;
 }
 .alugue-agora:hover {
     box-shadow: 0 0 8px #91000A,
