--- a/ds1t-b/projeto-hamburguer/css/cardapio.css
+++ b/ds1t-b/projeto-hamburguer/css/cardapio.css
@@ -53,3 +53,15 @@
     font-size: 2rem;
     color: #fff;
 }
+/* MOBILE */
+@media (max-width:640px){
+    .container-buttons{
+        flex-direction: column;
+        height: 520px;
+    }
+    .container-hamburguer{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+}
