--- a/ds1t-b/projeto-hamburguer/css/quem-somos.css
+++ b/ds1t-b/projeto-hamburguer/css/quem-somos.css
@@ -50,3 +50,32 @@
     font-family: 'Artifika', serif;
     width: 560px;
 }
+/* MOBILE */
+@media (max-width:640px){
+    .container__title{
+        justify-content: center;
+        text-align: center;
+    }
+    .quem-somos__photo{
+        width: 100%;
+        height: 320px;
+    }
+    .description{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .description__image{
+        width: 420px;
+    }
+    .description-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .description__text{
+        display: flex;
+        text-align: center;
+        font-size: 1.5rem;
+    }
+}
