--- a/ds1m-b/Eduardo Ribeiro Pimenta/css/novidades.css
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/css/novidades.css
@@ -68,6 +68,7 @@
         width:100%;
         height: 500px;
         overflow: hidden;
+        z-index: 0;
     }
     .images-container{
         gap: 5px;
