--- a/ds1m-a/cleiton/css/personagens.css
+++ b/ds1m-a/cleiton/css/personagens.css
@@ -1,4 +1,5 @@
 .personagens {
+    padding-bottom: 50px;
     background-image: url(../img/back_personagens.png);
     height: auto;
     flex-direction: column;
@@ -6,7 +7,7 @@
 
 .personagens H1 {
     color: #ffffff;
-    font-size: 96px;
+    font-size: 6rem;
     text-align: center;
     padding-bottom: 90px;
 }
@@ -19,7 +20,7 @@
 .personagens_card,
 .personagens_card_principal {
     background-color: #252525;
-    height: 375px;
+    height: 380px;
     width: 280px;
     padding-top: 20px;
     place-items: center;
@@ -27,17 +28,11 @@
     flex-direction: column;
     color: #ffffff;
     font-size: 2.5rem;
-    border: 5px solid #252525;
-    transition: border-color 1s;
+    border: 7px solid #252525;
 }
 
 .personagens_card_principal {
     width: 310px;
-}
-
-.personagens_card_principal:hover,
-.personagens_card:hover {
-    border-color: var(--primary-color);
 }
 
 .personagens_lista_secundarios,
@@ -56,11 +51,17 @@
     padding-bottom: 150px;
 }
 
+.personagens_card_principal:hover,
+.personagens_card:hover {
+    border-color: var(--primary-color);
+    transition: 1s;
+    color: var(--second-color);
+}
+
 .personagens_lista_secundarios {
+    padding-left: 20vw;
     gap: 150px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 95%;
 }
 
 #kratos,
@@ -69,7 +70,7 @@
 #freya,
 #angrboda,
 #tyr,
-#brok,
+#brok-e-sindri,
 #mimir {
     display: none;
     font-size: 2rem;
@@ -82,23 +83,33 @@
 #freya img,
 #angrboda img,
 #tyr img,
-#brok img,
 #mimir img {
     height: 700px;
     width: 530px;
 }
 
+#brok-e-sindri img {
+    height: 600px;
+    width: 454px;
+}
+
 #kratos li,
-#atreus li,
-#thor li,
-#freya li,
-#angrboda li,
-#tyr li,
-#brok li,
-#mimir li {
+#atreus li {
     display: flex;
     align-items: center;
     width: 70%;
     gap: 200px;
     margin-left: 300px;
+}
+
+#thor li,
+#freya li,
+#angrboda li,
+#tyr li,
+#brok-e-sindri li,
+#mimir li {
+    display: flex;
+    align-items: center;
+    width: 70%;
+    gap: 200px;
 }
