--- a/ds1m-a/cleiton/css/style.css
+++ b/ds1m-a/cleiton/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --primary-color: #0F4E98;
+    --second-color: #922929;
 }
 
 html {
@@ -22,15 +23,17 @@ header {
     align-items: center;
 }
 
-.menu {
+#menu {
     display: flex;
     height: 100%;
     justify-content: center;
     gap: 35px;
 }
 
-.menu li:hover {
+#menu li:hover,
+.omega:hover {
     color: var(--primary-color);
+    transition: 0.7s;
 }
 
 .logo {
@@ -44,4 +47,11 @@ header {
 
 section {
     height: 100vh;
+}
+
+footer {
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    background-color: #101010;
 }
