--- a/ds1m-b/lucasvinicius/css/bo1.css
+++ b/ds1m-b/lucasvinicius/css/bo1.css
@@ -1,6 +1,7 @@
 #bo1{
     display: flex;
-    z-index: -1;
+    flex-direction: column;
+    gap: 130px;
 }
 
 #bo1::before {
@@ -13,6 +14,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     filter: grayscale(10%);
-    z-index: 4;
+    z-index: -2;
     box-shadow: inset 150px -150px 150px #000;
 }
+
