--- a/ds1m-b/felipeflorencio/css/carousel.css
+++ b/ds1m-b/felipeflorencio/css/carousel.css
@@ -2,15 +2,13 @@
     display: flex;
     flex-direction: row;
     gap: 10%;
-    margin-top: 40px;
-    margin-left: 50px;
-    margin-right: 50px;
     justify-content: space-around;
 }
 .carousel li{
    display: flex;
    flex-direction: column;
    width: 16rem;
+   margin: 0;
    gap: 1.75rem;
 }
 .carousel h2{
