--- a/ds1m-b/felipeflorencio/css/composers.css
+++ b/ds1m-b/felipeflorencio/css/composers.css
@@ -1,42 +1,100 @@
-#chopin{
-    align-items: flex-start;
+#chopin {
     text-align: left;
 }
-#bethoven{
+
+#bethoven {
     align-items: center;
     text-align: center;
     margin-top: 7rem;
 }
-#mozart{
+
+#mozart {
     align-items: flex-end;
     text-align: end;
     margin-top: 2.8rem;
 }
+
 @media (max-width:960px) {
-    #bethoven,#mozart{
-       margin-top: 0;
+    #chopin,#bethoven, #mozart {
+        text-align: center;
+        margin-top: 0;
+        align-items: center;
     }
-    .index-composers{
-        margin-bottom: 0;
-    }
-   .composers{
+    .composers {
         display: flex;
-        flex-flow: column nowrap;
-   }
-   .composers-wrapper{
-    overflow-x: hidden;
-    overflow-y: hidden;
-   }
-   .buttons{
-    display: inline;
-    height: 2rem;
-    width: 2rem;
-    justify-content: center;
-   }
-   .composers__buttons{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-   }
+        flex-direction: column;
+        overflow: hidden;
+        padding: 5%;
+        justify-content: center;
+        align-items: center;
+        /* background-color: teal; */
+    }
+    .composers ul{
+        display: flex;
+        justify-content: space-around;
+        gap: 8rem;
+        height: 100%;
+        width: 75%;
+        overflow: hidden;
+        /* background-color: tomato; */
+    }
+    .card{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        gap: 1.5rem;
+    }
+    .card h2 {
+        font-family: 'Fredericka the Great';
+        font-weight: 400;
+        font-size: 60px;
+        line-height: 59px;
+        color: #D2D1E8;
+        align-self: center;
+    }
+    .card p {
+        font-family: 'Sunflower';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        letter-spacing: 0.11em;
+        color: #D2D1E8;
+        text-align: center;
+    }
+    .card img {
+        flex-shrink: 0;
+        height: 50%;
+        width: 100%;
+    }
+
     
+
+    .buttons {
+        display: flex;
+        gap: 1rem;
+    }
+
+    button {
+        font-family: Frederia;
+        font-size: 16px;
+        background-color: #7A3B00;
+        color: #D2D1E8;
+        border-radius: 1rem;
+        height: 2rem;
+        width: 5rem;
+        font-family: 'Fredericka the Great';
+    }
+
+    button:hover {
+        background-color: #D2D1E8;
+        color: #7A3B00;
+    }
+
+    .composers__buttons {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
 }
