--- a/ds1m-b/Paula-B/css/porque.css
+++ b/ds1m-b/Paula-B/css/porque.css
@@ -1,6 +1,6 @@
 .container_porque {
     display: grid;
-    background-image: url(../img/ui.png);
+    background-image: url(../img/Rectangle\ 12.png);
     background-size: cover;
     width: 100%;
     height: 85vh;
