--- a/ds1m-b/Paula-B/css/raças.css
+++ b/ds1m-b/Paula-B/css/raças.css
@@ -34,6 +34,13 @@
     gap: 150px;
 }
 
+.racas-containeer {
+    display: flex;
+    margin-top: 30px;
+    justify-content: center;
+    gap: 150px;
+}
+
 .card {
     position: relative;
     display: block;
