--- a/ds1m-b/Paula-B/css/sobre.css
+++ b/ds1m-b/Paula-B/css/sobre.css
@@ -26,12 +26,14 @@
     height: 85vh;
     background-repeat: no-repeat;
 }
+
 .description-cat {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 370px;
-    font-size: 1.8vw;
+    flex-direction: column;
+    gap: 100px;
+    font-size: 1.5vw;
     font-family: 'Patrick Hand', cursive;
     text-shadow: black 0.2em 0.2em 0.3em;
 }
@@ -40,7 +42,6 @@
     display: grid;
     width: 500px;
     margin-top: 50px;
-    
     color: white;
 }
 
